--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -128,7 +128,14 @@ nav ul {
 
 
 /* menu bar------------------- */
-
+.hs-overlay{
+/* From https://css.glass */
+background: rgba(37, 37, 37, 0.11);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(19.6px);
+-webkit-backdrop-filter: blur(19.6px);
+}
 /* .menu_box {
   position: absolute;
   display: flex;
